<resources>
    <string name="app_name">Calculator</string>
    <string name="egal">=</string>
    <string name="egal2">+</string>
    <string name="ori">*</string>
    <string name="punct">.</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="impartit">/</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="_0p">0</string>
    <string name="_2p">2</string>
    <string name="_3p">3</string>
    <string name="_4p">4</string>
    <string name="_5p">5</string>
    <string name="_6p">6</string>
    <string name="_7p">7</string>
    <string name="_8p">8</string>
    <string name="_9p">9</string>
    <string name="orip">*</string>
    <string name="minusp">-</string>
    <string name="punctp">.</string>
    <string name="impartitp">/</string>
    <string name="_1p">1</string>
    <string name="egalp">=</string>
    <string name="plusp">+</string>
    <string name="ce">C</string>
    <string name="ce2">CE</string>
    <string name="procent">%</string>
    <string name="rad">Rad</string>
    <string name="about">About</string>
    <string name="contents">Contents</string>
    <string name="result">result</string>
    <string name="enter_number">enter_number</string>
</resources>
