<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myth.calculator.MainActivity">

    <Button
        android:id="@+id/btnCE"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/ce2"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnC"
        app:layout_constraintLeft_toRightOf="@+id/btnC" />

    <Button
        android:id="@+id/btnC"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="8dp"
        android:text="@string/ce"
        app:layout_constraintLeft_toLeftOf="@+id/newNumber"
        app:layout_constraintTop_toBottomOf="@+id/newNumber" />

    <EditText
        android:id="@+id/result"
        android:layout_width="267dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/result"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:focusableInTouchMode="false"
        android:importantForAutofill="no"
        tools:focusedByDefault="false" />

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/result"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintLeft_toLeftOf="@+id/newNumber"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/newNumber"
        android:layout_width="267dp"
        android:layout_height="49dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/enter_number"
        android:inputType="numberSigned|numberDecimal"
        android:textAlignment="textEnd"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:importantForAutofill="no"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button0"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="1dp"
        android:text="@string/_0p"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/_2p"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        app:layout_constraintLeft_toRightOf="@+id/button1" />

    <Button
        android:id="@+id/button3"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/_3p"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        app:layout_constraintLeft_toRightOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="1dp"
        android:text="@string/_4p"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <Button
        android:id="@+id/button5"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/_5p"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4"
        app:layout_constraintLeft_toRightOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/_6p"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5"
        app:layout_constraintLeft_toRightOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="1dp"
        android:text="@string/_7p"
        app:layout_constraintLeft_toLeftOf="@+id/btnC"
        app:layout_constraintTop_toBottomOf="@+id/btnC" />

    <Button
        android:id="@+id/button8"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/_8p"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        app:layout_constraintLeft_toRightOf="@+id/button7" />

    <Button
        android:id="@+id/button9"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/_9p"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8"
        app:layout_constraintLeft_toRightOf="@+id/button8" />

    <Button
        android:id="@+id/button1"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginTop="-1dp"
        android:text="@string/_1p"
        app:layout_constraintLeft_toLeftOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/impartitp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintLeft_toRightOf="@+id/button9" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/punctp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        app:layout_constraintLeft_toRightOf="@+id/button0" />

    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/orip"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button6" />

    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/plusp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEquals"
        app:layout_constraintLeft_toRightOf="@+id/buttonEquals" />

    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/egalp"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDot"
        app:layout_constraintLeft_toRightOf="@+id/buttonDot" />

    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/minusp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintLeft_toRightOf="@+id/button3" />

    <Button
        android:id="@+id/btnProcent"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/procent"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnCE"
        app:layout_constraintLeft_toRightOf="@+id/btnCE" />

    <Button
        android:id="@+id/btnRadical"
        android:layout_width="66dp"
        android:layout_height="66dp"
        android:layout_marginStart="1dp"
        android:text="@string/rad"
        app:layout_constraintBaseline_toBaselineOf="@+id/btnProcent"
        app:layout_constraintLeft_toRightOf="@+id/btnProcent" />

</android.support.constraint.ConstraintLayout>
